@@ -8,7 +8,7 @@
 # Copyright (c) 2001 by Andreas Kupries <a.kupries@westend.com>
 # All rights reserved.
 #
-# RCS: @(#) $Id: matrix.test,v 1.2 2001/05/20 11:22:09 andreas_kupries Exp $
+# RCS: @(#) $Id: matrix.test,v 1.3 2001/11/24 02:24:55 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -80,7 +80,7 @@ test matrix-0.3 {matrix errors} {
     catch {mymatrix foo} msg
     mymatrix destroy
     set msg
-} "bad option \"foo\": must be add, cells, cellsize, columns, columnwidth, delete, destroy, format, get, insert, link, rowheight, rows, set, swap, or unlink"
+} "bad option \"foo\": must be add, cells, cellsize, columns, columnwidth, delete, destroy, format, get, insert, link, rowheight, rows, search, set, swap, or unlink"
 
 test matrix-0.4 {matrix errors} {
     matrix mymatrix
@@ -454,11 +454,37 @@ mymatrix add rows    3
 mymatrix add columns 3
 mymatrix set rect 0 0 {{1 2 5} {3 4 6} {7 8 9}}"
 
+test matrix-5.2 {internal format} {
+    matrix mymatrix
+    mymatrix add column
+    mymatrix add row {1}
+    mymatrix add column {2}
+    mymatrix add row {3 4}
+    mymatrix add column {5 6}
+    mymatrix add row {7 8 9}
+    set result [mymatrix format 2string]
+    mymatrix destroy
+    set result
+} "1 2 5\n3 4 6\n7 8 9"
+
+test matrix-5.3 {internal format} {
+    matrix mymatrix
+    mymatrix add column
+    mymatrix add row {1}
+    mymatrix add column {2}
+    mymatrix add row {3a 4}
+    mymatrix add column {5 6}
+    mymatrix add row [list 7 8 "9\nb"]
+    set result [mymatrix format 2string]
+    mymatrix destroy
+    set result
+} "1  2 5\n3a 4 6\n7  8 9\n     b"
+
 if {![catch {package require memchan}]} {
     # We have memory channels and can therefore test
     # 'format2channel-via' too.
 
-    test matrix-5.2 {formatting} {
+    test matrix-5.4 {formatting} {
 	matrix mymatrix
 	mymatrix add column
 	mymatrix add row {1}
@@ -1375,6 +1401,36 @@ test matrix-9.6 {linking} {
     mymatrix destroy
     set result
 } {can't set "a(1,5)": bad row index 5, row does not exist}
+
+
+foreach {n mode range pattern result} {
+    0  -exact  {all}          {ab}  {{0 3}}
+    1  -glob   {all}          {a*}  {{0 2} {0 3}}
+    2  -regexp {all}          {b.}  {{1 3}}
+    3  -exact  {row    2}     {b}   {{1 2}}
+    4  -glob   {row    3}     {b*}  {{1 3}}
+    5  -regexp {row    4}     {d}   {{0 4} {1 4}}
+    6  -exact  {column 2}     {c}   {{2 2}}
+    7  -glob   {column 0}     {a*}  {{0 2} {0 3}}
+    8  -regexp {column 1}     {b.*} {{1 2} {1 3}}
+    9  -exact  {rect 1 1 3 3} {c}   {{2 2}}
+    10 -glob   {rect 1 1 3 3} {b*}  {{1 2} {1 3}}
+    11 -regexp {rect 1 1 3 3} {b.*} {{1 2} {1 3}}
+} {
+    test matrix-10.$n "searching ($mode $range $pattern)" {
+	matrix mymatrix
+	mymatrix add columns 5
+	mymatrix add row {1  2  3 4 5}
+	mymatrix add row {6  7  8 9 0}
+	mymatrix add row {a  b  c d e}
+	mymatrix add row {ab ba f g h}
+	mymatrix add row {cd 4d x y z}
+	set result [eval mymatrix search $mode $range $pattern]
+	mymatrix destroy
+	set result
+    } $result ; # {}
+}
+
   
 ::tcltest::cleanupTests
 
